package cinemaSystem

enum class SeatState {
    BOOKED,
    FREE,
    OCCUPIED
}
